--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,14 +1,17 @@
 * {
   box-sizing: border-box;
   padding:10px;
+  font-family: Arial;
 }
 h1{
   text-align: center 
 }
-div {
-  background-color: #00FFFF;
+div>div {
+  background-color: gray;
   border: 1px solid black;
   position:relative;
+
+  
 }
 p {
   width: 100px;
@@ -18,12 +21,15 @@ p {
   position:relative;
   top:-26px;
   left:11px;
+  font-weight:  bold;
+  padding-bottom: 25px;
 }
 section {
+
  clear:right;
 }
 #p1 {
-  background-color: #A52A2A;
+  background-color: #F02020;
   float: right;
 }
 #p2 {
@@ -45,8 +51,7 @@ section {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid black;
-  }
+   }
   .col-lg-1 {
     width: 8.33%;
   }
@@ -89,8 +94,7 @@ section {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid black;
-  }
+   }
   .col-md-1 {
     width: 8.33%;
   }
@@ -125,6 +129,51 @@ section {
     width: 91.66%;
   }
   .col-md-12 {
+    width: 100%;
+  }
+}
+
+
+/********** Medium devices only **********/
+@media  (max-width: 767px) {
+  .col-sd-1, .col-sd-2, .col-sd-3, .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12 {
+    float: left;
+   
+  }
+  .col-sd-1 {
+    width: 8.33%;
+  }
+  .col-sd-2 {
+    width: 16.66%;
+  }
+  .col-sd-3 {
+    width: 25%;
+  }
+  .col-sd-4 {
+    width: 33.33%;
+  }
+  .col-sd-5 {
+    width: 41.66%;
+  }
+  .col-sd-6 {
+    width: 50%;
+  }
+  .col-sd-7 {
+    width: 58.33%;
+  }
+  .col-sd-8 {
+    width: 66.66%;
+  }
+  .col-sd-9 {
+    width: 74.99%;
+  }
+  .col-sd-10 {
+    width: 83.33%;
+  }
+  .col-sd-11 {
+    width: 91.66%;
+  }
+  .col-sd-12 {
     width: 100%;
   }
 }
